Fixed a text alignment issue in IE..

--- a/src/stylesheets/partials/timelines.less
+++ b/src/stylesheets/partials/timelines.less
@@ -31,7 +31,7 @@ dl.timeline {
 			border-radius: 6px;
 			padding: 15px 20px;
 			font-size: 24px;
-			text-align: initial;
+			text-align: left;
 			margin-top: 0;
 
 			// Tick icon within the header.
